<resources>
    <string name="app_name">Kissan Saarthi</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Login</string>
    <string name="string_enter_name">Enter your name</string>
    <string name="string_phone_no">Phone No.</string>
    <string name="string_choose_password">Choose your password</string>
    <string name="string_password">Password</string>
    <string name="string_state">State</string>
    <string name="string_city">City/Town</string>

    <string name="button_register">Register</string>
    <string name="button_login">Login</string>
    <string name="title_activity_register">Register</string>
    <string name="title_activity_home">Home</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_zonal">Zonal</string>

    <string name="title1">Select State</string>
    <string name="title2">Farmer Zone</string>
    <string name="title3">Dealer Zone</string>
    <string name="title4">Weather</string>
    <string name="title5">News</string>
    <string name="title6">Mandi</string>
    <string name="title7">News Details</string>
</resources>
